--- a/index1.html
+++ b/index1.html
@@ -1,1 +1,76 @@
-# theinfinox.github.io
+<!DOCTYPE html>
+<html>
+<head>
+<link rel=stylesheet type=text/css href=style.css>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width" intial-scale="1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>NEW HSS NELLIMOOD</title>
+</head>
+<body>
+<div id=arrow1>
+<a href=#>&dArr;</a>
+</div>
+<header>
+<div id=images>
+<li class=one></li>
+<li class=two></li>
+<li class=three></li>
+</div>
+<div id=name>
+<a href=#clear2>NEW HSS NELLIMOOD</a>
+</div>
+<div id=arrow2>
+<a href=#clear2>&dArr;</a>
+</div>
+<div id=menu>
+<ul>
+<li><a href=index.html>HOME</a></li>
+<li><a href=gal.html>GALLERY</a></li>
+<li><a href=abo.html>ABOUT US</a></li>
+<li><a href=#clear2>ARTICLES</a></li>
+<li><a href=#clear1>NEWS</a></li>
+<li><a href=#foot>JOIN US</a></li>
+<li><a href=#foot>CONTACT US</a></li>
+</ul>
+</div>
+<div id=clear1>
+</div>
+</header>
+<br>
+<div id=news>
+<marquee>New hss nellimood is a school in trivandrum distyrict of kerala.Here we
+supercomposes many activities with the texual studies.New hss nellimood is a school in
+trivandrum distyrict of kerala.Here we supercomposes many activities with the texual studies.</
+marquee>
+</div><br>
+<section>
+<div id=clear2>
+</div>
+<div id=sech>
+<center>NEW THE INTRO</center>
+</div><br><br><br><br><br><br>
+<div id=secp>
+<p>
+New hss nellimood is a school in trivandrum distyrict of kerala.Here we supercomposes many
+activities with the texual studies.New hss nellimood is a school in trivandrum distyrict of kerala.
+</div>
+</p>
+</div>
+</section>
+<br><br>
+<footer id=foot>
+<form>
+<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;JOIN
+US&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</span>&nbsp;&nbsp;&nbsp;&nb
+sp;&nbsp;&nbsp;<input id=input1 type=email placeholder="enter your email here"
+required>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input id=input2
+type=submit value="JOIN US">
+</form><br>
+<center><br>
+ADDRESS:NEW HSS NELLIMOOD,NELLIMOOD.P.O<br>
+&copy;2017.NEW HSSNELLIMOOD.All rights reserved.
+</center><br><br>
+</footer>
+</body>
+</html>
