--- a/index1.html
+++ b/index1.html
@@ -41,8 +41,7 @@
 <div id=news>
 <marquee>New hss nellimood is a school in trivandrum distyrict of kerala.Here we
 supercomposes many activities with the texual studies.New hss nellimood is a school in
-trivandrum distyrict of kerala.Here we supercomposes many activities with the texual studies.</
-marquee>
+trivandrum distyrict of kerala.Here we supercomposes many activities with the texual studies.</marquee>
 </div><br>
 <section>
 <div id=clear2>
