--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE! html>
 <html>
 <head>
+  <title>theinfinox</title>
 <link rel=stylesheet type=text/css href=style.css>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width" intial-scale="1.0">
