--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 <DOCTYPE! html>
-<html>
-<head>
-<link rel=stylesheet type=text/css href=style.css>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width" intial-scale="1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-</head>
-<body>
-<header>
+    <html>
 
-<div id=images>
-<li class=one></li>
-<li class=two></li>
-<li class=three></li>
-</div>
+    <head>
+        <link rel=stylesheet type=text/css href=style.css>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width" intial-scale="1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    </head>
 
-</header>
-<section>
-</section>
-<footer>
-</footer>
-</body>
-</html>
+    <body>
+        <header>
+            <div id=menu>
+                <ul>
+                    <li><a href=index.html>HOME</a></li>
+                    <li><a href=gal.html>GALLERY</a></li>
+                    <li><a href=abo.html>ABOUT</a></li>
+                    <li><a href=#clear2>ARTICLES</a></li>
+                    <li><a href=#foot>CONTACT US</a></li>
+                </ul>
+            </div>
+
+            <div id=images>
+                <li class=one></li>
+                <li class=two></li>
+                <li class=three></li>
+            </div>
+
+        </header>
+        <section>
+        </section>
+        <footer>
+        </footer>
+    </body>
+
+    </html>
