--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <title>theinfinox</title>
         <link rel=stylesheet type=text/css href=style.css>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" intial-scale="1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,11 +14,11 @@
         <header>
             <div id=menu>
                 <ul>
-                    <li><a href=index.html>HOME</a></li>
-                    <li><a href=gal.html>GALLERY</a></li>
-                    <li><a href=#clear2>ARTICLES</a></li>
-                    <li><a href=abo.html>ABOUT</a></li>
-                    <li><a href=#foot>CONTACT</a></li>
+                    <li><a href=index.html>Home</a></li>
+                    <li><a href=gal.html>Gallery</a></li>
+                    <li><a href=#clear2>Articles</a></li>
+                    <li><a href=abo.html>About</a></li>
+                    <li><a href=#foot>Contact</a></li>
                 </ul>
             </div>
             <div id=images>
@@ -28,6 +29,8 @@
 
         </header>
         <section>
+            <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/cP_aPv3p2YM" frameborder="0"></iframe>
+
         </section>
         <footer>
         </footer>
