--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                 <li class=two></li>
                 <li class=three></li>
             </div>
+            <div id=name>
+                <a href=www.theinfinox.business.com><img src="https://raw.githubusercontent.com/theinfinox/theinfinox.github.io/main/images/4.png" no-repeat center fixed></a>
 
+            </div>
         </header>
         <section>
             <iframe id="ytplayer" type="text/html" width="640" height="360" src="https://www.youtube.com/embed/cP_aPv3p2YM" frameborder="0"></iframe>
