--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class=three></li>
             </div>
             <div id=name>
-                <a href=https://www.theinfinox.business.com><img src="https://raw.githubusercontent.com/theinfinox/theinfinox.github.io/main/images/4.png" no-repeat center fixed></a>
+                <a href=https://www.theinfinox.business.com><img src="https://raw.githubusercontent.com/theinfinox/theinfinox.github.io/main/images/4.png" no-repeat center fixed style="width: 100%;"></a>
 
             </div>
         </header>
