--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>THEINFINOX</title>
+    <title>theinfinox</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
@@ -39,8 +39,8 @@
     <header class="masthead">
         <div class="container d-flex h-100 align-items-center">
             <div class="mx-auto text-center">
-                <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-                <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
+                <h1 class="mx-auto my-0 text-uppercase">theinfinox</h1>
+                <h2 class="text-white-50 mx-auto mt-2 mb-5">Tech Agog</h2>
                 <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
             </div>
         </div>
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
+                    <h2 class="text-white mb-4">From Kerala</h2>
                     <p class="text-white-50">
                         Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
                         <a href="https://startbootstrap.com/theme/grayscale/">the preview page</a> . The theme is open source, and you can use it for any purpose, personal or commercial.
