--- a/index.html
+++ b/index.html
@@ -1,177 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>theinfinox</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-    <!-- Font Awesome icons (free version)-->
-    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600">
+    <link rel="stylesheet" href="assets/css/Footer-Basic.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+    <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body id="page-top">
-    <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Hey It's theinfinox</a>
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars"></i>
-                </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <!-- Masthead-->
-    <header class="masthead">
-        <div class="container d-flex h-100 align-items-center">
-            <div class="mx-auto text-center">
-                <h1 class="mx-auto my-0 text-uppercase">theinfinox</h1>
-                <h2 class="text-white-50 mx-auto mt-2 mb-5">Tech Agog</h2>
-                <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
-            </div>
-        </div>
-    </header>
-    <!-- About-->
-    <section class="about-section text-center" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2 class="text-white mb-4">From Kerala</h2>
-                    <p class="text-white-50">
-                        Tech Agog | Content writer | IoT
-                    </p>
+<body>
+    <section class="d-flex flex-column justify-content-between" id="hero" style="background: url(&quot;assets/img/plain-dark-black-wall-product-background.jpg&quot;) center / cover no-repeat;">
+        <div id="hero-top">
+            <nav class="navbar navbar-light navbar-expand-md">
+                <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navcol-1">
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item"><a class="nav-link active text-light" href="#">Home</a></li>
+                            <li class="nav-item"><a class="nav-link active text-white" data-target="#" href="index.html#next">ConTact</a></li>
+                        </ul>
+                    </div>
                 </div>
+            </nav>
+            <h1 class="text-center text-light" data-aos="fade-up" data-aos-duration="700" data-aos-once="true" id="title">theinfinox</h1>
+            <h2 class="text-center text-white" data-aos="fade-up" data-aos-duration="700" data-aos-once="true" id="subtitle">Govind S R</h2>
+        </div>
+        <div class="row">
+            <div class="col-9 offset-2">
+                <p class="lead text-center text-white">Tech Agog | Wanderlust | Keralite<br>CTO IEDC College of Engineering Attingal<br>Google DSC CEAL Cloud Facilitator<br>Additional Team Member For IEEE MOVE India Technology Committee</p>
             </div>
-            <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+        </div>
+        <div id="hero-bottom"></div>
+    </section>
+    <section data-aos="fade-up" data-aos-duration="700" id="video-and-stats">
+        <h1></h1><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/UjRguyakFgc?autoplay=1&amp;mute=1&amp;loop=1&amp;playlist=UjRguyakFgc&amp;controls=0" width="560" height="315"></iframe>
+        <section></section>
+        <section></section>
+        <div id="stats">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50" colspan="2">Skills</th>
+                    </tr>
+                </thead>
+                <tbody class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                    <tr class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                        <td class="text-uppercase text-center text-white cell-left" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">GitHub</td>
+                    </tr>
+                    <tr class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                        <td class="text-uppercase text-center text-white cell-left" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">Adobe Photoshop</td>
+                    </tr>
+                    <tr class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                        <td class="text-uppercase text-center text-white cell-left" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">WordPress</td>
+                    </tr>
+                    <tr class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                        <td class="text-uppercase text-center text-white cell-left" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">Web Designing</td>
+                    </tr>
+                    <tr class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                        <td class="text-uppercase text-center text-white cell-left" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">Bootstrap Studio</td>
+                    </tr>
+                    <tr class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                        <td class="text-uppercase text-center text-white cell-left" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">Web Content Writing</td>
+                    </tr>
+                    <tr class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                        <td class="text-uppercase text-center text-white cell-left" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">HTML</td>
+                    </tr>
+                    <tr class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                        <td class="text-uppercase text-center text-white cell-left" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">CSS</td>
+                    </tr>
+                    <tr class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                        <td class="text-uppercase text-center text-white cell-left" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">Google Docs</td>
+                    </tr>
+                    <tr class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                        <td class="text-uppercase text-center text-white cell-left" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">IoT</td>
+                    </tr>
+                    <tr class="text-uppercase text-center text-white" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">
+                        <td class="text-uppercase text-center text-white cell-left" data-aos="zoom-in-up" data-aos-duration="200" data-aos-delay="50">Team Work</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </section>
-    <!-- Projects-->
-    <section class="projects-section bg-light" id="projects">
-        <div class="container">
-            <!-- Featured Project Row-->
-            <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
-                <div class="col-xl-4 col-lg-5">
-                    <div class="featured-text text-center text-lg-left">
-                        <h4>Shoreline</h4>
-                        <p class="text-black-50 mb-0">Grayscale </p>
-                    </div>
-                </div>
-            </div>
-            <!-- Project One Row-->
-            <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
-                <div class="col-lg-6">
-                    <div class="bg-black text-center h-100 project">
-                        <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">Misty</h4>
-                                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
-                                <hr class="d-none d-lg-block mb-0 ml-0" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Project Two Row-->
-            <div class="row justify-content-center no-gutters">
-                <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
-                <div class="col-lg-6 order-lg-first">
-                    <div class="bg-black text-center h-100 project">
-                        <div class="d-flex h-100">
-                            <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">Mountains</h4>
-                                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
-                                <hr class="d-none d-lg-block mb-0 mr-0" />
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Signup-->
-    <section class="signup-section" id="signup">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-lg-8 mx-auto text-center">
-                    <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                    <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-                    <form class="form-inline d-flex">
-                        <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Enter email address..." />
-                        <button class="btn btn-primary mx-auto" type="submit">Subscribe</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Contact-->
-    <section class="contact-section bg-black">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Address</h4>
-                            <hr class="my-4" />
-                            <div class="small text-black-50">Trivandrum</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fas fa-envelope text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Email</h4>
-                            <hr class="my-4" />
-                            <div class="small text-black-50"><a href="#!">theinfinox.info@gmail.com</a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-3 mb-md-0">
-                    <div class="card py-4 h-100">
-                        <div class="card-body text-center">
-                            <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                            <h4 class="text-uppercase m-0">Phone</h4>
-                            <hr class="my-4" />
-                            <div class="small text-black-50">not available</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="social d-flex justify-content-center">
-                <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
-            </div>
-        </div>
-    </section>
-    <!-- Footer-->
-    <footer class="footer bg-black small text-center text-white-50">
-        <div class="container">Copyright &copy; theinfinox 2021</div>
-    </footer>
-    <!-- Bootstrap core JS-->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Third party plugin JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <div class="footer-basic">
+        <footer>
+            <div id="vertical-line"></div><div class="brands" id="next"></div><button class="btn btn-primary reserve-button" type="button"><a class="text-uppercase text-white" href="wa.me/+919446909638">Contact&nbsp; Me</a></button>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">| theinfinox© 2021 |</a></li>
+            </ul>
+        </footer>
+    </div>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.js"></script>
 </body>
 
 </html>
