--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <h2 class="text-center text-white" data-aos="fade-up" data-aos-duration="700" data-aos-once="true" id="subtitle">Govind S R</h2>
         </div>
         <div class="row">
-            <div class="col-9 offset-2">
-                <p class="lead text-center text-white">Tech Agog | Wanderlust | Keralite<br>CTO IEDC College of Engineering Attingal<br>Google DSC CEAL Cloud Facilitator<br>Additional Team Member For IEEE MOVE India Technology Committee</p>
+            <div class="col-9 offset-2" style="text-align: center;transform: translate(-41px) scale(1.03);">
+                <p class="lead text-center text-white" style="transform: translate(2px);">Tech Agog | Wanderlust | Keralite<br>CTO IEDC College of Engineering Attingal<br>Google DSC CEAL Cloud Facilitator<br>Additional Team Member For IEEE MOVE India Technology Committee</p>
             </div>
         </div>
         <div id="hero-bottom"></div>
