--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </section>
     <div class="footer-basic">
         <footer>
-            <div id="vertical-line"></div><div class="brands" id="next"></div><button class="btn btn-primary reserve-button" type="button"><a class="text-uppercase text-white" href="wa.me/+919446909638">Contact&nbsp; Me</a></button>
+            <div id="vertical-line"></div><div class="brands" id="next"></div><button class="btn btn-primary reserve-button" type="button"><a class="text-uppercase text-white" href="http://wa.me/+919446909638">Contact&nbsp; Me</a></button>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">| theinfinox© 2021 |</a></li>
             </ul>
