--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>theinfinox</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600">
+    <link rel="stylesheet" href="assets/css/divider-text-middle.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="https://unpkg.com/@bootstrapstudio/bootstrap-better-nav/dist/bootstrap-better-nav.min.css">
@@ -16,8 +17,8 @@
 <body>
     <section class="d-flex flex-column justify-content-between" id="hero" style="background: url(&quot;assets/img/plain-dark-black-wall-product-background.jpg&quot;) center / cover no-repeat;">
         <div id="hero-top">
-            <nav class="navbar navbar-light navbar-expand-md">
-                <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <nav class="navbar navbar-light navbar-expand-md text-white">
+                <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler text-white" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon text-light"></span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item"><a class="nav-link active text-light" href="#">Home</a></li>
@@ -29,15 +30,12 @@
             <h1 class="text-center text-light" data-aos="fade-up" data-aos-duration="700" data-aos-once="true" id="title">theinfinox</h1>
             <h2 class="text-center text-white" data-aos="fade-up" data-aos-duration="700" data-aos-once="true" id="subtitle">Govind S R</h2>
         </div>
-        <div class="row">
-            <div class="col-9 offset-2" style="text-align: center;transform: translate(-41px) scale(1.03);">
-                <p class="lead text-center text-white" style="transform: translate(2px);">Tech Agog | Wanderlust | Keralite<br>CTO IEDC College of Engineering Attingal<br>Google DSC CEAL Cloud Facilitator<br>Additional Team Member For IEEE MOVE India Technology Committee</p>
-            </div>
-        </div>
+        <h6 class="text-center text-white"><br>Tech Agog | Wanderlust | Keralite<br>CTO IEDC College of Engineering Attingal<br>Google DSC CEAL Cloud Facilitator<br>Additional Team Member For IEEE MOVE India Technology Committee<br><br></h6>
+        <div style="text-align:center;"></div>
         <div id="hero-bottom"></div>
     </section>
     <section data-aos="fade-up" data-aos-duration="700" id="video-and-stats">
-        <h1></h1><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/UjRguyakFgc?autoplay=1&amp;mute=1&amp;loop=1&amp;playlist=UjRguyakFgc&amp;controls=0" width="560" height="315"></iframe>
+        <h1></h1><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/UjRguyakFgc?autoplay=1&amp;mute=1&amp;loop=1&amp;playlist=UjRguyakFgc" width="558" height="315" style="margin-top: 10px;"></iframe>
         <section></section>
         <section></section>
         <div id="stats">
