--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="d-flex flex-column justify-content-between" id="hero" style="background: url(&quot;assets/img/plain-dark-black-wall-product-background.jpg&quot;) center / cover no-repeat;">
         <div id="hero-top">
             <nav class="navbar navbar-light navbar-expand-md text-white">
-                <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="background: rgba(255,255,255,0.2);"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon" style="background: rgba(255,255,255,0);color: rgb(255,255,255);"></span></button>
+                <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="background: rgba(255,255,255,0.2);"><span class="sr-only">Toggle navigation</span></button>
                     <div class="collapse navbar-collapse" id="navcol-1">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item"><a class="nav-link active text-light" href="#">Home</a></li>
