--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div id="hero-top">
             <nav class="navbar navbar-light navbar-expand-md text-white">
                 <div class="container-fluid"><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1" style="background: rgba(255,255,255,0.2);"><span class="sr-only">Toggle navigation</span></button>
-                    <div class="collapse navbar-collapse" id="navcol-1">
+                    <div class="collapse navbar-collapse text-dark" id="navcol-1">
                         <ul class="navbar-nav mx-auto">
-                            <li class="nav-item"><a class="nav-link active text-light" href="#">Home</a></li>
+                            <li class="nav-item"><a class="nav-link active text-light" href="theinfinox.github.io">Home</a></li>
                             <li class="nav-item"><a class="nav-link active text-white" data-target="#" href="index.html#next">ConTact</a></li>
                         </ul>
                     </div>
