--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h1 class="text-center text-light" data-aos="fade-up" data-aos-duration="700" data-aos-once="true" id="title">theinfinox</h1>
             <h2 class="text-center text-white" data-aos="fade-up" data-aos-duration="700" data-aos-once="true" id="subtitle">Govind S R</h2>
         </div>
-        <h6 class="text-center text-white"><br>Tech Agog | Wanderlust | Keralite<br>CTO IEDC College of Engineering Attingal<br>Google DSC CEAL Cloud Facilitator<br>Additional Team Member For IEEE MOVE India Technology Committee<br><br></h6>
+        <h6 class="text-center text-white"><br>Tech Agog | Wanderlust | Keralite<br>Ex:CTO IEDC College of Engineering Attingal<br>Google DSC CEAL Cloud Facilitator (Oct 2020)<br>Additional Team Member For IEEE MOVE India Technology Committee<br><br></h6>
         <div style="text-align:center;"></div>
         <div id="hero-bottom"></div>
     </section>
