--- a/card/index.html
+++ b/card/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+    <title>Govind SR | Social Card</title>  
+    <link rel="icon" type="image/x-icon" href="/customs/favicon.ico">
+  
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
