--- a/card/index.html
+++ b/card/index.html
@@ -3,7 +3,7 @@
     <head>
 
     <title>Govind SR | Social Card</title>  
-    <link rel="icon" type="image/x-icon" href="/customs/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="customs/favicon.ico">
   
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
