--- a/card/index.html
+++ b/card/index.html
@@ -27,22 +27,22 @@ style="font-family: 'Alumni Sans Pinstripe', sans-serif;">Govind SR</div>
 
 <div class="justify-center flex flex-wrap flex-row-6 w-[50vw] h-[8vh] inset-x-0 bottom-0 m-auto pl-2 pr-2  pt-5">
     <div class=" justify-center grow p-2"><a href="https://twitter.com/theinfinox">
-        <img class="m-auto w-8" alt="theinfinox Twitter" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/twitter.svg" />
+        <img class="invert m-auto w-8" alt="theinfinox Twitter" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/twitter.svg" />
       </a></div>
       <div class=" justify-between grow p-2"><a href="https://linkedin.com/in/theinfinox">
-        <img class="m-auto w-8" alt="theinfinox Linkdein" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/linkedin.svg" />
+        <img class="invert m-auto w-8" alt="theinfinox Linkdein" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/linkedin.svg" />
       </a></div>
       <div class=" justify-between grow p-2" ><a href="https://github.com/theinfinox">
-        <img class="m-auto w-8" alt="theinfinox Github" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg" />
+        <img class="invert m-auto w-8" alt="theinfinox Github" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg" />
       </a></div>
       <div class=" justify-between grow p-2"><a href="https://t.me/theinfinox">
-        <img class="m-auto w-8" alt="theinfinox Telegram" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/telegram.svg" />
+        <img class="invert m-auto w-8" alt="theinfinox Telegram" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/telegram.svg" />
       </a></div>
       <div class=" justify-between grow p-2"><a href="https://instagram.com/theinfinox">
-        <img class="m-auto w-8" alt="theinfinox Instagram" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/instagram.svg" />
+        <img class="invert m-auto w-8" alt="theinfinox Instagram" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/instagram.svg" />
       </a></div>
       <div class=" justify-between grow p-2"><a href="https://www.facebook.com/theinfinox.me">
-        <img class="m-auto w-8" alt="theinfinox Facebook" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/facebook.svg" />
+        <img class="invert m-auto w-8" alt="theinfinox Facebook" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/facebook.svg" />
       </a></div>
 </div> 
 
