--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@ style="font-family: 'Alumni Sans Pinstripe', sans-serif;">Govind SR</div>
         <img class="invert m-auto w-8" alt="theinfinox Facebook" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/facebook.svg" />
       </a></div>
 </div> 
-<a href="http://51.137.124.213/hello/" target="_blank">Visit</a> 
+<a href="http://51.137.124.213/hello/">Visit</a> 
 </div></body>
 </html>
