--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@ style="font-family: 'Alumni Sans Pinstripe', sans-serif;">Govind SR</div>
       <div class=" justify-between grow p-2"><a href="https://www.facebook.com/theinfinox.me">
         <img class="invert m-auto w-8" alt="theinfinox Facebook" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/facebook.svg" />
       </a></div>
-</div> 
+<!-- </div> 
 <a href="http://51.137.124.213/hello/">Visit</a> 
-</div></body>
+</div> -->
+
+</body>
 </html>
