--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <title>Govind SR | Social Card</title>  
     <link rel="icon" type="image/x-icon" href="customs/favicon.ico">
   
+
+<meta name="title" content="theinfinox | Govind SR | Developer">
+<meta name="description" content="Tech Agog | Developer | Maker | Wanderlust">
+<meta name="keywords" content="theinfinox, govind, govind sr, infinox, ceal, trivandrum, web developer">
+<meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
+<meta name="revisit-after" content="14 days">
+
+
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
