--- a/index.html
+++ b/index.html
@@ -2,18 +2,27 @@
 <html>
     <head>
 
-    <title>Govind SR | Social Card</title>  
+    <title>Govind S R | Portfolio | Home</title>  
     <link rel="icon" type="image/x-icon" href="customs/favicon.ico">
   
 
-<meta name="title" content="theinfinox | Govind SR | Developer">
-<meta name="description" content="Tech Agog | Developer | Maker | Wanderlust">
-<meta name="keywords" content="theinfinox, govind, govind sr, infinox, ceal, trivandrum, web developer">
+<meta name="title" content="theinfinox | Govind S R | Backend Engineer | Brand Designer">
+<meta name="description" content="Backend Engineer | Brand Designer | IoT Dev | Intern Kerala Water Authority | Chief Innovation Officer at IEDC CELL">
+<meta name="keywords" content="theinfinox, govind, govind sr, infinox, ceal, trivandrum, web developer, brand designer, kerala">
 <meta name="robots" content="index, follow">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="language" content="English">
-<meta name="revisit-after" content="14 days">
-
+<meta name="revisit-after" content="7 days">
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Readex+Pro&display=swap');
+  #myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+</style>
 
 
         <meta charset="utf-8">
@@ -27,14 +36,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&display=swap" rel="stylesheet">
 <script src="https://cdn.tailwindcss.com"></script>
     </head>
+    <video autoplay loop muted poster="customs/1.jpg" id="myVideo">
+      <source type="video/mp4" src="customs/gsr.mp4">
+      <source type="video/ogg" src="">
+      <source type="video/webm" src="customs/gsr.webm">
+    </video>
     <body class=" w-screen h-screen bg-no-repeat bg-cover" style="background-image: url('customs/1.jpg')">
-<div class=" w-[90vw] h-[80vh] bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-600 rounded-md mx-auto my-auto absolute inset-0">
-<div class="relative    w-60 h-60 aspect-square overflow-hidden rounded-full flex flex-row  justify-center items-center mx-auto mt-6"><img src="https://avatars.githubusercontent.com/u/64773624"></div>
+<div class=" w-[70vw] h-[60vh] bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-600 rounded-md mx-auto my-auto absolute inset-0">
+<div class="relative  filter grayscale  w-60 h-60 aspect-square overflow-hidden rounded-full flex flex-row  justify-center items-center mx-auto mt-6 hover:filter-none"><img src="https://avatars.githubusercontent.com/u/64773624"></div>
 
-<div class="flex flex-row  justify-center items-center pt-7 no-underline text-white text-2xl">@theinfinox</div>  
+<div class="flex flex-row  justify-center items-center pt-7 no-underline text-white text-2xl" style="font-family: 'Comfortaa', cursive;">@theinfinox</div>  
 
 <div class="flex flex-row  justify-center items-center pt-2 bold no-underline text-white text-[5rem]" 
-style="font-family: 'Alumni Sans Pinstripe', sans-serif;">Govind SR</div>    
+style="font-family: 'Readex Pro', sans-serif;;">Govind S R</div>    
 
 <div class="justify-center flex flex-wrap flex-row-6 w-[50vw] h-[8vh] inset-x-0 bottom-0 m-auto pl-2 pr-2  pt-5">
     <div class=" justify-center grow p-2"><a href="https://twitter.com/theinfinox">
