--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&display=swap" rel="stylesheet">
 <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <video autoplay loop muted poster="customs/1.jpg" id="myVideo">
+    <video autoplay loop muted id="myVideo">
       <source type="video/mp4" src="customs/gsr.mp4">
       <source type="video/ogg" src="">
       <source type="video/webm" src="customs/gsr.webm">
     </video>
     <body class=" w-screen h-screen bg-no-repeat bg-cover" style="background-image: url('customs/1.jpg')">
 <div class=" w-[70vw] h-[60vh] bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-600 rounded-md mx-auto my-auto absolute inset-0">
-<div class="relative  filter grayscale  w-60 h-60 aspect-square overflow-hidden rounded-full flex flex-row  justify-center items-center mx-auto mt-6 hover:filter-none"><img src="https://avatars.githubusercontent.com/u/64773624"></div>
+<div class="relative  transition duration-150 ease-in-out  filter grayscale  w-60 h-60 aspect-square overflow-hidden rounded-full flex flex-row  justify-center items-center mx-auto mt-6 transform hover:filter-none"><img src="https://avatars.githubusercontent.com/u/64773624"></div>
 
 <div class="flex flex-row  justify-center items-center pt-7 no-underline text-white text-2xl" style="font-family: 'Comfortaa', cursive;">@theinfinox</div>  
 
