--- a/index.html
+++ b/index.html
@@ -1,77 +1,87 @@
 <!DOCTYPE html>
 <html>
-    <head>
-
+<head>
     <title>Govind S R | Portfolio | Home</title>  
     <link rel="icon" type="image/x-icon" href="customs/favicon.ico">
-  
 
-<meta name="title" content="theinfinox | Govind S R | Backend Engineer | Brand Designer">
-<meta name="description" content="Backend Engineer | Brand Designer | IoT Dev | Intern Kerala Water Authority | Chief Innovation Officer at IEDC CELL">
-<meta name="keywords" content="theinfinox, govind, govind sr, infinox, ceal, trivandrum, web developer, brand designer, kerala">
-<meta name="robots" content="index, follow">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="language" content="English">
-<meta name="revisit-after" content="7 days">
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Readex+Pro&display=swap');
-  #myVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-}
-</style>
+    <meta name="title" content="theinfinox | Govind S R | Backend Engineer | Brand Designer">
+    <meta name="description" content="Backend Engineer | Brand Designer | IoT Dev | Intern Kerala Water Authority | Chief Innovation Officer at IEDC CELL">
+    <meta name="keywords" content="theinfinox, govind, govind sr, infinox, ceal, trivandrum, web developer, brand designer, kerala">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="7 days">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Readex+Pro&display=swap');
 
+        #myVideo {
+            position: fixed;
+            right: 0;
+            bottom: 0;
+            min-width: 100%;
+            min-height: 100%;
+        }
+    </style>
 
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="input.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&display=swap" rel="stylesheet">
-<script src="https://cdn.tailwindcss.com"></script>
-    </head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16">
+</head>
+
+<body class="w-screen h-screen bg-no-repeat bg-cover" style="background-color:black;">
     <video autoplay loop muted id="myVideo">
-      <source type="video/mp4" src="customs/gsr.mp4">
-      <source type="video/ogg" src="">
-      <source type="video/webm" src="customs/gsr.webm">
+        <source type="video/mp4" src="customs/gsr.mp4">
+        <source type="video/ogg" src="">
+        <source type="video/webm" src="customs/gsr.webm">
     </video>
-    <body class=" w-screen h-screen bg-no-repeat bg-cover" style="background-image: url('customs/1.jpg')">
-<div class=" w-[70vw] h-[60vh] bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-600 rounded-md mx-auto my-auto absolute inset-0">
-<div class="relative  transition duration-150 ease-in-out  filter grayscale  w-60 h-60 aspect-square overflow-hidden rounded-full flex flex-row  justify-center items-center mx-auto mt-6 transform hover:filter-none"><img src="https://avatars.githubusercontent.com/u/64773624"></div>
 
-<div class="flex flex-row  justify-center items-center pt-7 no-underline text-white text-2xl" style="font-family: 'Comfortaa', cursive;">@theinfinox</div>  
+    <div class="w-11/12 sm:w-10/12 md:w-8/12 lg:w-7/12 xl:w-6/12 h-3/5 sm:h-2/3 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-600 rounded-md mx-auto my-auto absolute inset-0">
+      <div class="relative transition duration-150 ease-in-out filter grayscale w-60 h-60 aspect-square overflow-hidden rounded-full flex flex-row justify-center items-center mx-auto mt-6 transform hover:filter-none">
+          <img src="https://avatars.githubusercontent.com/u/64773624" class="w-full h-full object-cover" alt="Profile Picture">
+      </div>
+  
+      <div class="flex flex-row justify-center items-center pt-7 no-underline text-white text-2xl font-comfortaa">@theinfinox</div>  
+  
+      <div class="flex flex-row justify-center items-center pt-2 font-bold no-underline text-white text-5xl font-readex-pro">Govind S R</div>    
+  
+      <div class="justify-center flex flex-wrap flex-row w-11/12 sm:w-10/12 md:w-8/12 lg:w-7/12 xl:w-6/12 h-16 sm:h-20 md:h-24 lg:h-28 xl:h-32 mx-auto bottom-0 m-auto pl-2 pr-2 pt-5">
+          <div class="justify-center grow p-2">
+              <a href="https://twitter.com/theinfinox">
+                  <img class="invert m-auto w-8" alt="theinfinox Twitter" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/twitter.svg" />
+              </a>
+          </div>
+          <div class="justify-between grow p-2">
+              <a href="https://linkedin.com/in/theinfinox">
+                  <img class="invert m-auto w-8" alt="theinfinox LinkedIn" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/linkedin.svg" />
+              </a>
+          </div>
+          <div class="justify-between grow p-2">
+              <a href="https://github.com/theinfinox">
+                  <img class="invert m-auto w-8" alt="theinfinox GitHub" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg" />
+              </a>
+          </div>
+          <div class="justify-between grow p-2">
+              <a href="https://t.me/theinfinox">
+                  <img class="invert m-auto w-8" alt="theinfinox Telegram" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/telegram.svg" />
+              </a>
+          </div>
+          <div class="justify-between grow p-2">
+              <a href="https://instagram.com/theinfinox">
+                  <img class="invert m-auto w-8" alt="theinfinox Instagram" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/instagram.svg" />
+              </a>
+          </div>
+          <div class="justify-between grow p-2">
+              <a href="https://www.facebook.com/theinfinox.me">
+                  <img class="invert m-auto w-8" alt="theinfinox Facebook" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/facebook.svg" />
+              </a>
+          </div>
+      </div>
+  </div>
+  
+    </div>
 
-<div class="flex flex-row  justify-center items-center pt-2 bold no-underline text-white text-[5rem]" 
-style="font-family: 'Readex Pro', sans-serif;;">Govind S R</div>    
-
-<div class="justify-center flex flex-wrap flex-row-6 w-[50vw] h-[8vh] inset-x-0 bottom-0 m-auto pl-2 pr-2  pt-5">
-    <div class=" justify-center grow p-2"><a href="https://twitter.com/theinfinox">
-        <img class="invert m-auto w-8" alt="theinfinox Twitter" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/twitter.svg" />
-      </a></div>
-      <div class=" justify-between grow p-2"><a href="https://linkedin.com/in/theinfinox">
-        <img class="invert m-auto w-8" alt="theinfinox Linkdein" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/linkedin.svg" />
-      </a></div>
-      <div class=" justify-between grow p-2" ><a href="https://github.com/theinfinox">
-        <img class="invert m-auto w-8" alt="theinfinox Github" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg" />
-      </a></div>
-      <div class=" justify-between grow p-2"><a href="https://t.me/theinfinox">
-        <img class="invert m-auto w-8" alt="theinfinox Telegram" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/telegram.svg" />
-      </a></div>
-      <div class=" justify-between grow p-2"><a href="https://instagram.com/theinfinox">
-        <img class="invert m-auto w-8" alt="theinfinox Instagram" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/instagram.svg" />
-      </a></div>
-      <div class=" justify-between grow p-2"><a href="https://www.facebook.com/theinfinox.me">
-        <img class="invert m-auto w-8" alt="theinfinox Facebook" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/facebook.svg" />
-      </a></div>
-<!-- </div> 
-<a href="http://51.137.124.213/hello/">Visit</a> 
-</div> -->
-
+    <script src="https://cdn.tailwindcss.com"></script>
 </body>
 </html>
