--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <source type="video/ogg" src="">
         <source type="video/webm" src="customs/gsr.webm">
     </video>
-
-    <div class="w-11/12 sm:w-10/12 md:w-8/12 lg:w-7/12 xl:w-6/12 h-3/5 sm:h-2/3 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-600 rounded-md mx-auto my-auto absolute inset-0">
+    <div class="w-11/12 sm:w-10/12 md:w-8/12 lg:w-7/12 xl:w-6/12 h-auto sm:h-2/3 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-600 rounded-md mx-auto my-auto absolute inset-0">
       <div class="relative transition duration-150 ease-in-out filter grayscale w-60 h-60 aspect-square overflow-hidden rounded-full flex flex-row justify-center items-center mx-auto mt-6 transform hover:filter-none">
           <img src="https://avatars.githubusercontent.com/u/64773624" class="w-full h-full object-cover" alt="Profile Picture">
       </div>
