--- a/index.html
+++ b/index.html
@@ -34,13 +34,12 @@
 
 <body class="w-screen h-screen bg-no-repeat bg-cover" style="background-color:black;">
   <div class="flex justify-center items-center">
-    <video autoplay loop muted id="myVideo" class="w-full">
-      <source src="customs/gsr.mp4" type="video/mp4" media="(orientation: landscape)">
-      <source src="customs/gsr.webm" type="video/webm" media="(orientation: landscape)">
-      <source src="customs/gsrm.mp4" type="video/mp4" media="(orientation: portrait)">
-      <source src="customs/gsrm.webm" type="video/webm" media="(orientation: portrait)">
-
-    </video>
+    <video autoplay loop muted id="myVideo" class="w-full" data-src-landscape-mp4="customs/gsr.mp4" data-src-landscape-webm="customs/gsr.webm" data-src-portrait-mp4="customs/gsrm.mp4" data-src-portrait-webm="customs/gsrm.webm">
+        <source src="" type="video/mp4" media="(orientation: landscape)">
+        <source src="" type="video/webm" media="(orientation: landscape)">
+        <source src="" type="video/mp4" media="(orientation: portrait)">
+        <source src="" type="video/webm" media="(orientation: portrait)">
+      </video>
   </div>
   <script>
     function switchVideoSource() {
@@ -56,11 +55,62 @@
   
     window.addEventListener("orientationchange", switchVideoSource);
     switchVideoSource();
+
+
+    // Function to lazy load images and videos
+function lazyLoadElements() {
+  const lazyLoadElements = document.querySelectorAll('.lazy-load');
+
+  const options = {
+    root: null,
+    rootMargin: '0px',
+    threshold: 0.1
+  };
+
+  function lazyLoadCallback(entries, observer) {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        observer.unobserve(entry.target);
+        
+        if (entry.target.tagName === 'IMG') {
+          entry.target.src = entry.target.dataset.src;
+        } else if (entry.target.tagName === 'VIDEO') {
+          const isLandscape = window.matchMedia('(orientation: landscape)').matches;
+          const isPortrait = window.matchMedia('(orientation: portrait)').matches;
+          const isMp4Supported = entry.target.canPlayType('video/mp4') !== '';
+          const isWebmSupported = entry.target.canPlayType('video/webm') !== '';
+
+          if (isLandscape && isMp4Supported) {
+            entry.target.src = entry.target.dataset.srcLandscapeMp4;
+          } else if (isLandscape && isWebmSupported) {
+            entry.target.src = entry.target.dataset.srcLandscapeWebm;
+          } else if (isPortrait && isMp4Supported) {
+            entry.target.src = entry.target.dataset.srcPortraitMp4;
+          } else if (isPortrait && isWebmSupported) {
+            entry.target.src = entry.target.dataset.srcPortraitWebm;
+          }
+
+          entry.target.load();
+        }
+      }
+    });
+  }
+
+  const lazyLoadObserver = new IntersectionObserver(lazyLoadCallback, options);
+
+  lazyLoadElements.forEach(element => {
+    lazyLoadObserver.observe(element);
+  });
+}
+
+// Call the lazy loading function
+lazyLoadElements();
+
   </script>
   
     <div class="w-11/12 sm:w-10/12 md:w-8/12 lg:w-7/12 xl:w-6/12 h-2/3 sm:h-2/3 bg-clip-padding backdrop-filter backdrop-blur-xl  bg-opacity-60 border border-gray-600 rounded-md mx-auto my-auto absolute inset-0">
       <div class="relative transition duration-150 ease-in-out filter grayscale w-60 h-60 aspect-square overflow-hidden rounded-full flex flex-row justify-center items-center mx-auto mt-6 transform hover:filter-none">
-          <img src="https://avatars.githubusercontent.com/u/64773624" class="w-full h-full object-cover" alt="Profile Picture">
+        <img src="https://avatars.githubusercontent.com/u/64773624" class="w-full h-full object-cover lazy-load" data-src="https://avatars.githubusercontent.com/u/64773624" alt="Profile Picture">
       </div>
   
       <div class="flex flex-row justify-center items-center pt-7 no-underline text-white text-2xl font-comfortaa">@theinfinox</div>  
