--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="w-screen h-screen bg-no-repeat bg-cover" style="background-color:black;">
@@ -110,7 +110,24 @@
       </video>
   </div>
 
-    <div class="w-11/12 sm:w-10/12 md:w-8/12 lg:w-7/12 xl:w-6/12 h-2/3 sm:h-2/3 bg-clip-padding backdrop-filter backdrop-blur-xl  bg-opacity-60 border border-gray-600 rounded-md mx-auto my-auto absolute inset-0">
+  <script>
+    function switchVideoSource() {
+      var video = document.getElementById("myVideo");
+      var isPortrait = window.innerHeight > window.innerWidth;
+  
+      if (isPortrait) {
+        video.src = video.canPlayType("video/mp4") ? "customs/gsrm.mp4" : "customs/gsrm.webm";
+      } else {
+        video.src = video.canPlayType("video/mp4") ? "customs/gsr.mp4" : "customs/gsr.webm";
+      }
+    }
+  
+    window.addEventListener("orientationchange", switchVideoSource);
+    switchVideoSource();
+  </script>
+  
+    <div class="w-11/12 sm:w-10/12 md:w-8/12 lg:w-7/12 xl:w-6/12 h-2/3 sm:h-2/3 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-600 rounded-md mx-auto my-auto absolute inset-0">
+
       <div class="relative transition duration-150 ease-in-out filter grayscale w-60 h-60 aspect-square overflow-hidden rounded-full flex flex-row justify-center items-center mx-auto mt-6 transform hover:filter-none">
         <img src="https://avatars.githubusercontent.com/u/64773624" class="w-full h-full object-cover lazy-load" data-src="https://avatars.githubusercontent.com/u/64773624" alt="Profile Picture">
       </div>
