--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
     <meta name="revisit-after" content="7 days">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
         function switchVideoSource() {
           var video = document.getElementById("myVideo");
@@ -129,12 +130,12 @@
     <div class="w-11/12 sm:w-10/12 md:w-8/12 lg:w-7/12 xl:w-6/12 h-2/3 sm:h-2/3 bg-clip-padding backdrop-filter backdrop-blur-xl bg-opacity-60 border border-gray-600 rounded-md mx-auto my-auto absolute inset-0">
 
       <div class="relative transition duration-150 ease-in-out filter grayscale w-60 h-60 aspect-square overflow-hidden rounded-full flex flex-row justify-center items-center mx-auto mt-6 transform hover:filter-none">
-        <img src="https://avatars.githubusercontent.com/u/64773624" class="w-full h-full object-cover lazy-load" data-src="https://avatars.githubusercontent.com/u/64773624" alt="Profile Picture">
+<img src="https://avatars.githubusercontent.com/u/64773624" class="w-full h-full object-cover lazy-load responsive" data-src="https://avatars.githubusercontent.com/u/64773624" alt="Profile Picture">
       </div>
   
       <div class="flex flex-row justify-center items-center pt-7 no-underline text-white text-2xl font-comfortaa">@theinfinox</div>  
   <br>
-      <div class="flex flex-row justify-center items-center pt-2 font-bold no-underline text-white text-5xl font-readex-pro">Govind S R</div>    
+<div class="flex flex-row justify-center items-center pt-2 font-bold no-underline text-white text-5xl md:text-6xl lg:text-7xl font-readex-pro">Govind S R</div>
       <div class="justify-center flex flex-wrap flex-row w-11/12 sm:w-10/12 md:w-8/12 lg:w-7/12 xl:w-6/12 h-16 sm:h-20 md:h-24 lg:h-28 xl:h-32 mx-auto bottom-0 m-auto pl-2 pr-2 pt-5">
           <div class="justify-center grow p-2">
               <a href="https://twitter.com/theinfinox">
