--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;url=https://app.ktu.edu.in/login.htm">
+    <meta http-equiv="refresh" content="0;url=https://github.com/theinfinox">
 </head>
 <body></body>
 </html>
