--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0;url=https://theinfinox.notion.site/GitHub-College-of-Engineering-Attingal-1242ba6d7e008096a66afe4998ab6327?pvs=4">
+    <meta http-equiv="refresh" content="0;url=https://scarlet-barnacle-772.notion.site/Git-Session-8e8703437ecb45f69f320136ece5a77f?pvs=25">
 </head>
 <body></body>
 </html>
