--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <html>
 <head>
     <meta http-equiv="refresh" content="0;url=https://theinfinox.notion.site/">
+
+    <!-- Primary Meta Tags -->
+<title>Hi! I'm Govind S R | Personal Portfolio | Tech Agog</title>
+<meta name="title" content="Hi! I'm Govind S R | Personal Portfolio | Tech Agog" />
+<meta name="description" content="Director of Technology at Manav Prakriti Foundation | Founder & Developer @ PiCloud | Visual Storyteller @ 24 Frames Studio | Former DevOps intern @ KLA" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://govindsr.me/" />
+<meta property="og:title" content="Hi! I'm Govind S R | Personal Portfolio | Tech Agog" />
+<meta property="og:description" content="Director of Technology at Manav Prakriti Foundation | Founder & Developer @ PiCloud | Visual Storyteller @ 24 Frames Studio | Former DevOps intern @ KLA" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://govindsr.me/" />
+<meta property="twitter:title" content="Hi! I'm Govind S R | Personal Portfolio | Tech Agog" />
+<meta property="twitter:description" content="Director of Technology at Manav Prakriti Foundation | Founder & Developer @ PiCloud | Visual Storyteller @ 24 Frames Studio | Former DevOps intern @ KLA" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body></body>
 </html>
