--- a/index.html
+++ b/index.html
@@ -13,16 +13,19 @@
 <meta property="og:url" content="https://govindsr.me/" />
 <meta property="og:title" content="Hi! I'm Govind S R | Personal Portfolio | Tech Agog" />
 <meta property="og:description" content="Director of Technology at Manav Prakriti Foundation | Founder & Developer @ PiCloud | Visual Storyteller @ 24 Frames Studio | Former DevOps intern @ KLA" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="https://theinfinox.github.io/asset/gsfk.jpg" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://govindsr.me/" />
 <meta property="twitter:title" content="Hi! I'm Govind S R | Personal Portfolio | Tech Agog" />
 <meta property="twitter:description" content="Director of Technology at Manav Prakriti Foundation | Founder & Developer @ PiCloud | Visual Storyteller @ 24 Frames Studio | Former DevOps intern @ KLA" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="twitter:image" content="https://theinfinox.github.io/asset/gsfk.jpg" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
+
+<meta name="googlebot" content="notranslate">
+
 </head>
 <body></body>
 </html>
