--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!-- Meta Tags Generated with https://metatags.io -->
 
 <meta name="googlebot" content="notranslate">
-
+<meta name="google-site-verification" content="wC5x9e4jdXDIzMbp39PTSFhGRhbvGW_UjS6sQaZuGrI" />
 </head>
 <body></body>
 </html>
